Mon Oct 20 14:30:48 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/Makefile.av: Made changes so that
	  AV/SCTP_SEQ.cpp does not get built in non-SCTP builds.

Mon Oct 20 13:12:23 2003  Yamuna Krishnamurthy  <yamuna@oomworks.com>

	* orbsvcs/orbsvcs/Makefile.av: 

	Modified the Makefile to compile SCTP related files when sctp flag
	is set both to openss7 and lksctp. Initially it was including the
	SCTP related files only when sctp=openss7. This should fix build
	errors on the Red Hat LKSCTP build.

Mon Oct 20 11:03:37 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>

        * orbsvcs/tests/RTCosScheduling/RTCosScheduling_Client_Static.dsp:
        * orbsvcs/tests/RTCosScheduling/RTCosScheduling_Server_Static.dsp:
          Changed the configuration name from Debug and Release to
          Static Debug and Static Release.

Mon Oct 20 15:39:23 UTC 2003 Kevin Bryan <bryank@cs.uri.edu>

	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ServerScheduler_i.cpp:
	  Another cast of ACE_Thread::self() returns to int to satisfy FreeBSD.

Sun Oct 19 21:48:09 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Fault_Detector_Loader.cpp:
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Replication_Service.cpp:
        * orbsvcs/orbsvcs/FtRtEvent/ClientORB/FTRT_ClientORB_Loader.cpp:
        * orbsvcs/FTRT_Event_Service/Factory_Service/EventChannelFactory_i.cpp
          Fixed fuzz errors.

        * docs/releasenotes/ftrt_ec.html: minor updates.

Sun Oct 19 18:25:20 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/ForwardCtrlServerInterceptor.cpp:
	* tests/OBV/Supports/Supports_Test_impl.cpp: Fixed unused
	  ACE_ENV_ARG warnings.

Sun Oct 19 17:11:21 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/FTRT_Event_Service/Readme:
        * orbsvcs/orbsvcs/RTCosScheduling/README: Deleted these files and
	  moved them as part of release notes. See below.
